<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rrt</name>
  <version>1.0.0</version>
  <description>RRT node</description>
  <maintainer email="driverless@motorsport.unibo.it">UBM Driverless</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>f1tenth_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>../rosdoc2.yml</rosdoc2>
  </export>
</package>
